add more environment variables

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,3 +1,11 @@
-APP_URL = "http://localhost"
-APP_DEBUG = true
-PORT = 8080
+APP_URL= "http://localhost"
+APP_DEBUG=true
+PORT=8080
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=
+DB_USERNAME=root
+DB_PASSWORD=
+JWT_SECRET_KEY=
+APP_ENVIRONMENT=development
