--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "buffer-layout": "^1.2.2",
     "crypto-browserify": "^3.12.0",
     "daisyui": "^1.24.3",
+    "framer-motion": "^11.3.18",
     "fs-extra": "^10.0.1",
     "https-browserify": "^1.0.0",
     "immer": "^9.0.12",
